# barley-break

./: .gitignore  CMakeLists.txt  main.cpp
breaks/: CMakeLists.txt  main.cpp
guibreak/: guibreak.pro  main.cpp
libbreaks/: CMakeLists.txt  cell.cpp  cell.h
tests/: CMakeLists.txt  tests_cell.cpp
